--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    - uses: actions/checkout@xt
+    - uses: actions/checkout@v3.3.0
  
     - name: Install dependencies
       run: |
