--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -11,7 +11,9 @@ jobs:
  
     steps:
     - uses: actions/checkout@v3.3.0
- 
+    env:
+    ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
     - name: Install dependencies
       run: |
         sudo apt-get update -qq
