--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3.3.0
     env:
-    ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+    ACTIONS_ALLOW_UNSECURE_COMMANDS=true
 
     - name: Install dependencies
       run: |
