--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3.3.0
 
+    - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
+    id: ACTIONS_ALLOW_UNSECURE_COMMANDS
+    run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
+
     - name: Install dependencies
       run: |
         sudo apt-get update -qq
