--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -6,15 +6,16 @@ on:
   workflow_dispatch:
  
 jobs:
-  build:
+  
+test:
+    runs-on: self-hosted
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+
+build:
     runs-on: ubuntu-latest
  
     steps:
-
-    - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
-    id: ACTIONS_ALLOW_UNSECURE_COMMANDS
-    run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
-
     - uses: actions/checkout@v3.3.0
 
     - name: Install dependencies
