--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -10,7 +10,14 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
+
     - uses: actions/checkout@v3.3.0
+
+    - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
+      id: ACTIONS_ALLOW_UNSECURE_COMMANDS
+      run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
+
+
 
     - name: Install dependencies
       run: |
