--- a/.github/workflows/docker-spacewar.yml
+++ b/.github/workflows/docker-spacewar.yml
@@ -59,7 +59,7 @@ jobs:
  
     - name: Pack
       run: |
-        git clone https://github.com/m54c1/AnyKernel3?files=1 --branch=master --depth=1
+        git clone https://github.com/m54c1/AnyKernel3 --branch=master --depth=1
         cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3
         cd AnyKernel3
         ls -l
